// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`平滑化渲染测试 初始有值，非追加文字的内容更新 不设置 breakMode，验证将从公共前缀开始以初始速度流式输出 1`] = `
[
  "1
",
  "1
",
  "12
",
  "123
",
  "123
",
  "1234
",
  "12345
",
  "123456
",
  "1234567
",
  "1234567
",
  "12345678
",
  "12345678
",
  "123456789
",
  "1234567890
",
  "12345678901
",
  "123456789012
",
  "1234567890123
",
  "1234567890123
",
  "12345678901234
",
  "123456789012345
",
  "12345
",
  "12345
",
  "12345
",
  "12345
",
  "12345a
",
  "12345ab
",
  "12345ab
",
  "12345abc
",
  "12345abcd
",
  "12345abcde
",
  "12345abcdef
",
  "12345abcdef
",
  "12345abcdefg
",
  "12345abcdefg
",
  "12345abcdefgh
",
  "12345abcdefghi
",
  "12345abcdefghij
",
  "12345abcdefghija
",
  "12345abcdefghijab
",
  "12345abcdefghijabc
",
  "12345abcdefghijabc
",
  "12345abcdefghijabcd
",
  "12345abcdefghijabcde
",
  "12345abcdefghijabcdef
",
  "12345abcdefghijabcdef
",
  "12345abcdefghijabcdefg
",
  "12345abcdefghijabcdefgh
",
  "12345abcdefghijabcdefghi
",
  "12345abcdefghijabcdefghij
",
  "12345abcdefghijabcdefghija
",
  "12345abcdefghijabcdefghijab
",
  "12345abcdefghijabcdefghijab
",
  "12345abcdefghijabcdefghijabc
",
  "12345abcdefghijabcdefghijabcd
",
  "12345abcdefghijabcdefghijabcde
",
  "12345abcdefghijabcdefghijabcde
",
  "12345abcdefghijabcdefghijabcdef
",
  "12345abcdefghijabcdefghijabcdef
",
  "12345abcdefghijabcdefghijabcdefg
",
  "12345abcdefghijabcdefghijabcdefgh
",
  "12345abcdefghijabcdefghijabcdefghi
",
  "12345abcdefghijabcdefghijabcdefghi
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
]
`;

exports[`平滑化渲染测试 初始有值，非追加文字的内容更新 设置 breakMode = 'end'，验证将从末尾以初始速度流式输出 1`] = `
[
  "1
",
  "1
",
  "12
",
  "123
",
  "123
",
  "1234
",
  "12345
",
  "123456
",
  "1234567
",
  "1234567
",
  "12345678
",
  "12345678
",
  "123456789
",
  "1234567890
",
  "12345678901
",
  "123456789012
",
  "1234567890123
",
  "1234567890123
",
  "12345678901234
",
  "123456789012345
",
  "12345abcdefghijabcdefghijabcdefghi
",
  "12345abcdefghijabcdefghijabcdefghi
",
  "12345abcdefghijabcdefghijabcdefghi
",
  "12345abcdefghijabcdefghijabcdefghi
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij1
",
  "12345abcdefghijabcdefghijabcdefghij1
",
  "12345abcdefghijabcdefghijabcdefghij1
",
  "12345abcdefghijabcdefghijabcdefghij12
",
  "12345abcdefghijabcdefghijabcdefghij123
",
  "12345abcdefghijabcdefghijabcdefghij123
",
  "12345abcdefghijabcdefghijabcdefghij1234
",
  "12345abcdefghijabcdefghijabcdefghij12345
",
  "12345abcdefghijabcdefghijabcdefghij123451
",
  "12345abcdefghijabcdefghijabcdefghij1234512
",
  "12345abcdefghijabcdefghijabcdefghij12345123
",
  "12345abcdefghijabcdefghijabcdefghij123451234
",
  "12345abcdefghijabcdefghijabcdefghij123451234
",
  "12345abcdefghijabcdefghijabcdefghij1234512345
",
  "12345abcdefghijabcdefghijabcdefghij12345123451
",
  "12345abcdefghijabcdefghijabcdefghij123451234512
",
  "12345abcdefghijabcdefghijabcdefghij1234512345123
",
  "12345abcdefghijabcdefghijabcdefghij12345123451234
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345
",
  "12345abcdefghijabcdefghijabcdefghij1234512345123451
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123
",
  "12345abcdefghijabcdefghijabcdefghij1234512345123451234
",
  "12345abcdefghijabcdefghijabcdefghij12345123451234512345
",
  "12345abcdefghijabcdefghijabcdefghij12345123451234512345
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123451
",
  "12345abcdefghijabcdefghijabcdefghij12345123451234512345123
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123451234
",
  "12345abcdefghijabcdefghijabcdefghij1234512345123451234512345
",
  "12345abcdefghijabcdefghijabcdefghij12345123451234512345123451
",
  "12345abcdefghijabcdefghijabcdefghij1234512345123451234512345123
",
  "12345abcdefghijabcdefghijabcdefghij12345123451234512345123451234
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123451234512345
",
  "12345abcdefghijabcdefghijabcdefghij12345123451234512345123451234512
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123451234512345123
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123451234512345123
",
  "12345abcdefghijabcdefghijabcdefghij1234512345123451234512345123451234
",
  "12345abcdefghijabcdefghijabcdefghij12345123451234512345123451234512345
",
  "12345abcdefghijabcdefghijabcdefghij1234512345123451234512345123451234512
",
  "12345abcdefghijabcdefghijabcdefghij12345123451234512345123451234512345123
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123451234512345123451234
",
  "12345abcdefghijabcdefghijabcdefghij1234512345123451234512345123451234512345
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123451234512345123451234512
",
  "12345abcdefghijabcdefghijabcdefghij1234512345123451234512345123451234512345123
",
  "12345abcdefghijabcdefghijabcdefghij12345123451234512345123451234512345123451234
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123451234512345123451234512345
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123451234512345123451234512345
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123451234512345123451234512345
",
  "12345abcdefghijabcdefghijabcdefghij123451234512345123451234512345123451234512345
",
]
`;

exports[`平滑化渲染测试 初始有值，非追加文字的内容更新 设置 breakMode = 'prefix'，验证将从公共前缀开始以初始速度流式输出 1`] = `
[
  "1
",
  "1
",
  "12
",
  "123
",
  "123
",
  "1234
",
  "12345
",
  "123456
",
  "1234567
",
  "1234567
",
  "12345678
",
  "12345678
",
  "123456789
",
  "1234567890
",
  "12345678901
",
  "123456789012
",
  "1234567890123
",
  "1234567890123
",
  "12345678901234
",
  "123456789012345
",
  "12345
",
  "12345
",
  "12345
",
  "12345
",
  "12345a
",
  "12345ab
",
  "12345ab
",
  "12345abc
",
  "12345abcd
",
  "12345abcde
",
  "12345abcdef
",
  "12345abcdef
",
  "12345abcdefg
",
  "12345abcdefg
",
  "12345abcdefgh
",
  "12345abcdefghi
",
  "12345abcdefghij
",
  "12345abcdefghija
",
  "12345abcdefghijab
",
  "12345abcdefghijabc
",
  "12345abcdefghijabc
",
  "12345abcdefghijabcd
",
  "12345abcdefghijabcde
",
  "12345abcdefghijabcdef
",
  "12345abcdefghijabcdef
",
  "12345abcdefghijabcdefg
",
  "12345abcdefghijabcdefgh
",
  "12345abcdefghijabcdefghi
",
  "12345abcdefghijabcdefghij
",
  "12345abcdefghijabcdefghija
",
  "12345abcdefghijabcdefghijab
",
  "12345abcdefghijabcdefghijab
",
  "12345abcdefghijabcdefghijabc
",
  "12345abcdefghijabcdefghijabcd
",
  "12345abcdefghijabcdefghijabcde
",
  "12345abcdefghijabcdefghijabcde
",
  "12345abcdefghijabcdefghijabcdef
",
  "12345abcdefghijabcdefghijabcdef
",
  "12345abcdefghijabcdefghijabcdefg
",
  "12345abcdefghijabcdefghijabcdefgh
",
  "12345abcdefghijabcdefghijabcdefghi
",
  "12345abcdefghijabcdefghijabcdefghi
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
]
`;

exports[`平滑化渲染测试 初始有值，非追加文字的内容更新 设置 breakMode = 'start'，验证将从最开始以初始速度流式输出 1`] = `
[
  "1
",
  "1
",
  "12
",
  "123
",
  "123
",
  "1234
",
  "12345
",
  "123456
",
  "1234567
",
  "1234567
",
  "12345678
",
  "12345678
",
  "123456789
",
  "1234567890
",
  "12345678901
",
  "123456789012
",
  "1234567890123
",
  "1234567890123
",
  "12345678901234
",
  "123456789012345
",
  "",
  "",
  "",
  "",
  "1
",
  "12
",
  "12
",
  "123
",
  "1234
",
  "12345
",
  "12345a
",
  "12345ab
",
  "12345abc
",
  "12345abc
",
  "12345abcd
",
  "12345abcde
",
  "12345abcdef
",
  "12345abcdefg
",
  "12345abcdefgh
",
  "12345abcdefghi
",
  "12345abcdefghij
",
  "12345abcdefghija
",
  "12345abcdefghijab
",
  "12345abcdefghijabc
",
  "12345abcdefghijabc
",
  "12345abcdefghijabcd
",
  "12345abcdefghijabcde
",
  "12345abcdefghijabcdef
",
  "12345abcdefghijabcdefg
",
  "12345abcdefghijabcdefgh
",
  "12345abcdefghijabcdefghi
",
  "12345abcdefghijabcdefghij
",
  "12345abcdefghijabcdefghija
",
  "12345abcdefghijabcdefghijab
",
  "12345abcdefghijabcdefghijabc
",
  "12345abcdefghijabcdefghijabc
",
  "12345abcdefghijabcdefghijabcd
",
  "12345abcdefghijabcdefghijabcde
",
  "12345abcdefghijabcdefghijabcdef
",
  "12345abcdefghijabcdefghijabcdefg
",
  "12345abcdefghijabcdefghijabcdefgh
",
  "12345abcdefghijabcdefghijabcdefghi
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
  "12345abcdefghijabcdefghijabcdefghij
",
]
`;

exports[`平滑化渲染测试 初始有值，验证追加文字后平滑并逐字输出: 二次更新 1`] = `
[
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "1234567890123456789012345678901
",
  "1234567890123456789012345678901
",
  "1234567890123456789012345678901
",
  "12345678901234567890123456789012
",
  "12345678901234567890123456789012
",
  "123456789012345678901234567890123
",
  "1234567890123456789012345678901234
",
  "1234567890123456789012345678901234
",
  "12345678901234567890123456789012345
",
  "123456789012345678901234567890123456
",
  "123456789012345678901234567890123456
",
  "1234567890123456789012345678901234567
",
  "1234567890123456789012345678901234567
",
  "1234567890123456789012345678901234567
",
  "12345678901234567890123456789012345678
",
  "123456789012345678901234567890123456789
",
  "1234567890123456789012345678901234567890
",
  "1234567890123456789012345678901234567890
",
  "12345678901234567890123456789012345678901
",
  "123456789012345678901234567890123456789012
",
  "123456789012345678901234567890123456789012
",
  "1234567890123456789012345678901234567890123
",
  "12345678901234567890123456789012345678901234
",
  "123456789012345678901234567890123456789012345
",
  "123456789012345678901234567890123456789012345
",
  "123456789012345678901234567890123456789012345
",
  "1234567890123456789012345678901234567890123456
",
  "12345678901234567890123456789012345678901234567
",
  "123456789012345678901234567890123456789012345678
",
  "123456789012345678901234567890123456789012345678
",
  "1234567890123456789012345678901234567890123456789
",
  "12345678901234567890123456789012345678901234567890
",
  "12345678901234567890123456789012345678901234567890
",
  "123456789012345678901234567890123456789012345678901
",
  "1234567890123456789012345678901234567890123456789012
",
  "1234567890123456789012345678901234567890123456789012
",
  "12345678901234567890123456789012345678901234567890123
",
  "12345678901234567890123456789012345678901234567890123
",
  "123456789012345678901234567890123456789012345678901234
",
  "123456789012345678901234567890123456789012345678901234
",
  "1234567890123456789012345678901234567890123456789012345
",
  "12345678901234567890123456789012345678901234567890123456
",
  "12345678901234567890123456789012345678901234567890123456
",
  "123456789012345678901234567890123456789012345678901234567
",
  "123456789012345678901234567890123456789012345678901234567
",
  "1234567890123456789012345678901234567890123456789012345678
",
  "1234567890123456789012345678901234567890123456789012345678
",
]
`;

exports[`平滑化渲染测试 初始有值，验证追加文字后平滑并逐字输出: 初次更新 1`] = `
[
  "1
",
  "1
",
  "12
",
  "123
",
  "123
",
  "1234
",
  "12345
",
  "123456
",
  "1234567
",
  "1234567
",
  "12345678
",
  "12345678
",
  "123456789
",
  "1234567890
",
  "12345678901
",
  "123456789012
",
  "1234567890123
",
  "1234567890123
",
  "12345678901234
",
  "123456789012345
",
  "1234567890123456
",
  "12345678901234567
",
  "12345678901234567
",
  "123456789012345678
",
  "1234567890123456789
",
  "1234567890123456789
",
  "12345678901234567890
",
  "123456789012345678901
",
  "1234567890123456789012
",
  "12345678901234567890123
",
  "123456789012345678901234
",
  "123456789012345678901234
",
  "1234567890123456789012345
",
  "1234567890123456789012345
",
  "12345678901234567890123456
",
  "123456789012345678901234567
",
  "123456789012345678901234567
",
  "1234567890123456789012345678
",
  "12345678901234567890123456789
",
  "12345678901234567890123456789
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
]
`;

exports[`平滑化渲染测试 暂停流式平滑化，验证暂停成功: 播放 - 暂停 - 播放 1`] = `
[
  "1
",
  "1
",
  "12
",
  "123
",
  "123
",
  "1234
",
  "12345
",
  "123456
",
  "1234567
",
  "1234567
",
  "12345678
",
  "12345678
",
  "123456789
",
  "1234567890
",
  "12345678901
",
  "123456789012
",
  "1234567890123
",
  "1234567890123
",
  "12345678901234
",
  "123456789012345
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "1234567890123456
",
  "12345678901234567
",
  "123456789012345678
",
  "1234567890123456789
",
  "1234567890123456789
",
  "12345678901234567890
",
  "123456789012345678901
",
  "1234567890123456789012
",
  "12345678901234567890123
",
  "123456789012345678901234
",
  "123456789012345678901234
",
  "123456789012345678901234
",
  "1234567890123456789012345
",
  "12345678901234567890123456
",
  "123456789012345678901234567
",
  "123456789012345678901234567
",
  "1234567890123456789012345678
",
  "12345678901234567890123456789
",
  "12345678901234567890123456789
",
]
`;

exports[`平滑化渲染测试 自定义弹簧算法数值，验证设置有效: 增大弹性系数、减小缓冲区大小、增大初始速度的效果 1`] = `
[
  "1
",
  "12
",
  "1234
",
  "123456
",
  "12345678
",
  "1234567890
",
  "123456789012
",
  "12345678901234
",
  "1234567890123456
",
  "123456789012345678
",
  "12345678901234567890
",
  "12345678901234567890
",
  "12345678901234567890123
",
  "1234567890123456789012345
",
  "123456789012345678901234567
",
  "12345678901234567890123456789
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
]
`;

exports[`平滑化渲染测试 设置平滑化尾优化 开启尾优化时，平滑开关关闭时能平滑输出: 开关关闭之前的流式输出序列 1`] = `
[
  "1
",
  "1
",
  "12
",
  "123
",
  "123
",
  "1234
",
  "12345
",
  "123456
",
  "1234567
",
  "1234567
",
  "12345678
",
  "12345678
",
  "123456789
",
  "1234567890
",
  "12345678901
",
  "123456789012
",
  "1234567890123
",
  "1234567890123
",
  "12345678901234
",
  "123456789012345
",
]
`;

exports[`平滑化渲染测试 设置平滑化尾优化 开启尾优化时，平滑开关关闭时能平滑输出: 开关关闭之后的流式输出序列 1`] = `
[
  "1234567890123456
",
  "12345678901234567
",
  "12345678901234567
",
  "123456789012345678
",
  "1234567890123456789
",
  "12345678901234567890
",
  "123456789012345678901
",
  "1234567890123456789012
",
  "12345678901234567890123
",
  "1234567890123456789012345
",
  "12345678901234567890123456
",
  "123456789012345678901234567
",
  "1234567890123456789012345678
",
  "1234567890123456789012345678
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
]
`;

exports[`平滑化渲染测试 设置平滑化尾优化 开启尾优化时，平滑开关始终关闭，不平滑输出，直接展示全部文本: 开关始终关闭的流式输出序列 1`] = `
[
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
]
`;

exports[`平滑化渲染测试 设置最大流式输出速度 设置完最大速度后，再关闭速度设置，验证速度限制消失，能够平滑加速 1`] = `
[
  "",
  "1234
",
  "123456789
",
  "12345678901234
",
  "1234567890123456789
",
  "123456789012345678901234
",
  "12345678901234567890123456789
",
  "1234567890123456789012345678901234
",
  "123456789012345678901234567890123456789
",
  "12345678901234567890123456789012345678901234
",
  [
    "1234567890123456789012345678901234567890123456789
",
    "12345678901234567890123456789012345678901234567890123456789
",
    "1234567890123456789012345678901234567890123456789012345678901234567890123
",
    "12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012
",
    "12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456
",
    "123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234
",
    "123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567
",
    "1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234
",
    "123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345
",
    "1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901
",
  ],
]
`;

exports[`平滑化渲染测试 设置首屏平滑阈值 初始有值，长度大于阈值时直出 1`] = `
[
  "12345678901
",
  "12345678901
",
  "123456789012
",
  "1234567890123
",
  "1234567890123
",
  "12345678901234
",
  "123456789012345
",
  "123456789012345
",
  "1234567890123456
",
  "12345678901234567
",
  "12345678901234567
",
  "12345678901234567
",
  "123456789012345678
",
  "1234567890123456789
",
  "1234567890123456789
",
  "12345678901234567890
",
  "123456789012345678901
",
  "123456789012345678901
",
  "1234567890123456789012
",
  "12345678901234567890123
",
  "12345678901234567890123
",
  "123456789012345678901234
",
  "123456789012345678901234
",
  "123456789012345678901234
",
  "1234567890123456789012345
",
  "1234567890123456789012345
",
  "12345678901234567890123456
",
  "12345678901234567890123456
",
  "123456789012345678901234567
",
  "123456789012345678901234567
",
  "1234567890123456789012345678
",
  "1234567890123456789012345678
",
  "12345678901234567890123456789
",
  "12345678901234567890123456789
",
  "12345678901234567890123456789
",
  "12345678901234567890123456789
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
]
`;

exports[`平滑化渲染测试 设置首屏平滑阈值 初始有值，长度小于阈值时流式输出 1`] = `
[
  "1
",
  "1
",
  "12
",
  "123
",
  "123
",
  "1234
",
  "12345
",
  "123456
",
  "1234567
",
  "1234567
",
  "12345678
",
  "12345678
",
  "123456789
",
  "1234567890
",
  "12345678901
",
  "123456789012
",
  "1234567890123
",
  "1234567890123
",
  "12345678901234
",
  "123456789012345
",
  "1234567890123456
",
  "12345678901234567
",
  "12345678901234567
",
  "123456789012345678
",
  "1234567890123456789
",
  "1234567890123456789
",
  "12345678901234567890
",
  "123456789012345678901
",
  "1234567890123456789012
",
  "12345678901234567890123
",
  "123456789012345678901234
",
  "123456789012345678901234
",
  "1234567890123456789012345
",
  "1234567890123456789012345
",
  "12345678901234567890123456
",
  "123456789012345678901234567
",
  "123456789012345678901234567
",
  "1234567890123456789012345678
",
  "12345678901234567890123456789
",
  "12345678901234567890123456789
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
]
`;

exports[`平滑化渲染测试 设置首屏平滑阈值 初始有值，长度等于阈值时流式输出 1`] = `
[
  "1
",
  "1
",
  "12
",
  "123
",
  "123
",
  "1234
",
  "12345
",
  "123456
",
  "1234567
",
  "1234567
",
  "12345678
",
  "12345678
",
  "123456789
",
  "1234567890
",
  "12345678901
",
  "123456789012
",
  "1234567890123
",
  "1234567890123
",
  "12345678901234
",
  "123456789012345
",
  "1234567890123456
",
  "12345678901234567
",
  "12345678901234567
",
  "123456789012345678
",
  "1234567890123456789
",
  "1234567890123456789
",
  "12345678901234567890
",
  "123456789012345678901
",
  "1234567890123456789012
",
  "12345678901234567890123
",
  "123456789012345678901234
",
  "123456789012345678901234
",
  "1234567890123456789012345
",
  "1234567890123456789012345
",
  "12345678901234567890123456
",
  "123456789012345678901234567
",
  "123456789012345678901234567
",
  "1234567890123456789012345678
",
  "12345678901234567890123456789
",
  "12345678901234567890123456789
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
  "123456789012345678901234567890
",
]
`;
